--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -5,7 +5,7 @@
   min-width: 20%;
   max-width: 30%;
   max-height: 60%;
-  background-color: var(--dark);
+  background-color: var(--nintendo);
   overflow: auto;
   padding: .5rem;
   box-shadow: 0 0 1rem rgba(0, 0, 0, .5);
@@ -37,7 +37,7 @@
   right: 1%;
   font-size: 2rem;
   cursor: pointer;
-  background-color: var(--secondary);
+  /*background-color: var(--secondary);*/
   border-radius: 50%;
   padding: .25rem;
   width: 50px;
